--- a/pages/linq/search.mdx
+++ b/pages/linq/search.mdx
@@ -1,8 +1,13 @@
+import { useRef } from "react"
+import Alert from '../../components/alert'
+
 ### Search
 
 **Search extension** provides support for searching the entire database for a specified value.
 
-<br/>
+<Alert type="lightbulb">
+We are rewriting the calling syntax and this documentation may be out of date.
+</Alert>
 
 In the sample database, the records in the **Suppliers** table are as follows:
 
