--- a/pages/updates/7.0.mdx
+++ b/pages/updates/7.0.mdx
@@ -1,7 +1,7 @@
 ### Version: 7.0.18.1
 
 - Two field filters have been added: **DateOnlyRangeFilter**, **DateTimeRangeFilter**.
-- These methods has been marked as obsolete, please use **FilterBy(Func<,>, DateTimeRangeFilter)** method instead:
+- These methods has been marked as obsolete, please use **FilterBy(Func\<,\>, DateTimeRangeFilter)** method instead:
   - **WhereAfter**
   - **WhereBefore**
   - **WhereBetween**
