--- a/pages/guide/recently.mdx
+++ b/pages/guide/recently.mdx
@@ -2,7 +2,7 @@ import Alert from '../../components/alert'
 
 # Plan: Search Updates
 
-<Alert type="memo">
+<Alert type="note">
 Scheduled to be updated by December 31, 2023.
 </Alert>
 
