--- a/pages/linq/search.mdx
+++ b/pages/linq/search.mdx
@@ -5,7 +5,7 @@ import Alert from '../../components/alert'
 
 **Search extension** provides support for searching the entire database for a specified value.
 
-<Alert type="lightbulb">
+<Alert type="tip">
 We are rewriting the calling syntax and this documentation may be out of date.
 </Alert>
 
