--- a/pages/guide/get-started.mdx
+++ b/pages/guide/get-started.mdx
@@ -119,7 +119,7 @@ Employee  "1" --> "*" Order
 
 1. Create a Console Application ( **.NET 7** ).
 
-2. Use the follow commnd to install **Northwnd**:
+2. Use the follow command to install **Northwnd**:
 
     ```powershel
     dotnet add package Microsoft.EntityFrameworkCore --version 7.0.0
@@ -132,7 +132,7 @@ Employee  "1" --> "*" Order
 
 3. Then, you need to add a `NorthwndFactory.cs` file in the root of your project:
 
-    ```csharp
+    ```csharp filename="NorthwndFactory.cs"
     public class NorthwndFactory : IDesignTimeDbContextFactory<NorthwndContext>
     {
         private static readonly string _connectionString = "Data Source=northwnd.db";
@@ -156,7 +156,7 @@ Employee  "1" --> "*" Order
 
 5. Edit the `Program.cs` file:
 
-    ```csharp
+    ```csharp filename="Program.cs"
     static void Main(string[] args)
     {
         var factory = new NorthwndFactory();
@@ -183,7 +183,7 @@ Employee  "1" --> "*" Order
     }
     ```
 
-6. Compile and run the application, if all alread done, you will get the output:
+6. Compile and run the application, if all already done, you will get the output:
 
     ```sql
     SELECT "c"."CategoryID", "c"."CategoryName"
