--- a/pages/ef/agent-query.mdx
+++ b/pages/ef/agent-query.mdx
@@ -1,2 +1,7 @@
-### Agent Query
+import Alert from '../../components/alert'
 
+# Agent Query
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
