--- a/pages/ef/concurrency-resolving.mdx
+++ b/pages/ef/concurrency-resolving.mdx
@@ -1,2 +1,7 @@
-### Concurrency Resolving
+import Alert from '../../components/alert'
 
+# Concurrency Resolving
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
