--- a/pages/ef/design-annotation.mdx
+++ b/pages/ef/design-annotation.mdx
@@ -1,2 +1,7 @@
-### Design Annotation
+import Alert from '../../components/alert'
 
+# Design Annotation
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
