--- a/pages/ef/direct-handing.mdx
+++ b/pages/ef/direct-handing.mdx
@@ -1,2 +1,7 @@
-### Direct Handing
+import Alert from '../../components/alert'
 
+# Direct Handing
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
