--- a/pages/ef/format-annotation.mdx
+++ b/pages/ef/format-annotation.mdx
@@ -1,2 +1,7 @@
-### Format Annotation
+import Alert from '../../components/alert'
 
+# Format Annotation
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
