--- a/pages/ef/monitoring.mdx
+++ b/pages/ef/monitoring.mdx
@@ -1,2 +1,7 @@
-### Monitoring
+import Alert from '../../components/alert'
 
+# Monitoring
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
