--- a/pages/ef/translator.mdx
+++ b/pages/ef/translator.mdx
@@ -1,6 +1,6 @@
 import Alert from '../../components/alert'
 
-# Tree Query
+# Translator
 
 <Alert type="warning">
 Docs for this theme is under construction.
