--- a/pages/ef/web-feature.mdx
+++ b/pages/ef/web-feature.mdx
@@ -1,2 +1,7 @@
-### Web Feature
+import Alert from '../../components/alert'
 
+# Web Feature
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
