--- a/pages/guide/started.mdx
+++ b/pages/guide/started.mdx
@@ -1,3 +1,5 @@
+# Getting started
+
 ### Expoloer LinqSharp
 
 Exploring **LinqSharp** requires a clear understanding of the **SQL** statements it generates.
