--- a/pages/linq/order-by-case.mdx
+++ b/pages/linq/order-by-case.mdx
@@ -1,2 +1,7 @@
-### Order by Case
+import Alert from '../../components/alert'
 
+# Order by Case
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
