--- a/pages/linq/query-filter.mdx
+++ b/pages/linq/query-filter.mdx
@@ -1,2 +1,7 @@
-### Query Filter
+import Alert from '../../components/alert'
 
+# Query Filter
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
