--- a/pages/linq/search.mdx
+++ b/pages/linq/search.mdx
@@ -1,7 +1,6 @@
-import { useRef } from "react"
 import Alert from '../../components/alert'
 
-### Search
+# Search
 
 **Search extension** provides support for searching the entire database for a specified value.
 
