--- a/pages/memory/indexing.mdx
+++ b/pages/memory/indexing.mdx
@@ -1,2 +1,7 @@
-### Indexing
+import Alert from '../../components/alert'
 
+# Indexing
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
