--- a/pages/cli/dotnet-orm.mdx
+++ b/pages/cli/dotnet-orm.mdx
@@ -1,2 +1,7 @@
+import Alert from '../../components/alert'
+
 ### dotnet-orm
 
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
