--- a/pages/linq/paging-query.mdx
+++ b/pages/linq/paging-query.mdx
@@ -1,2 +1,7 @@
-### Paging Query
+import Alert from '../../components/alert'
 
+# Paging Query
+
+<Alert type="warning">
+Docs for this theme is under construction.
+</Alert>
