--- a/pages/guide/started.mdx
+++ b/pages/guide/started.mdx
@@ -20,9 +20,9 @@ ExpTree --> |Provider for MySQL| MySQL[SQL of MySQL]
 ExpTree --> |Other Providers...| Other[Other SQLs...]
 ```
 
-Most languages do not provide **Lambda** to **Expression Tree** compile-time conversion, because it also requires true generic support.
+Most languages does not provide compile-time conversion of Lambdas to Expression Trees, which is one of the reasons why the .NET ORM can be designed to be very easy to use.
 
-This is one of the reasons why **.NET ORM** can be designed to be very easy to use.
+It is worth pointing out that true generics support is also indispensable, which makes the expression tree more scalable.
 
 <br/>
 
