--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,31 @@
-# LinqSharp
+import { TextTitle, TextCenter } from '../components/text'
+import { SiteBadge, NuGetBadge } from '../components/shields'
+
+<TextTitle> LinqSharp </TextTitle>
+
+<TextCenter>
+<SiteBadge label="English" text="linqsharp.net" link="https://linqsharp.net" />
+<SiteBadge label="中文" text="zh.linqsharp.net" link="https://zh.linqsharp.net" />
+</TextCenter>
+
+<TextCenter>
+<NuGetBadge package="LinqSharp" />
+<NuGetBadge package="LinqSharp" type="download" label="Download" />
+<NuGetBadge package="LinqSharp.EFCore" />
+<NuGetBadge package="LinqSharp.EFCore" type="download" label="Download" />
+</TextCenter>
 
 *Better **LINQ** , better **.NET** .*
 
+
+
+#### LinqSharp
+
 **LinqSharp** is an open source **LINQ** extension library that allows you to write simple code to generate complex queries, including query extensions and dynamic query generation.
+
+
+
+#### LinqSharp.EFCore
 
 **LinqSharp.EFCore** is an enhanced library for **EntityFramework**, providing more data annotations, database functions, and custom storage rules, etc.
 
