--- a/pages/linq/order-by-case.mdx
+++ b/pages/linq/order-by-case.mdx
@@ -1,7 +1,7 @@
-import Alert from '../../components/alert'
+import { Warning } from '../../components/alert'
 
 # Order by Case
 
-<Alert type="warning">
+<Warning>
 Docs for this theme is under construction.
-</Alert>
+</Warning>
