--- a/pages/linq/search.mdx
+++ b/pages/linq/search.mdx
@@ -1,12 +1,12 @@
-import Alert from '../../components/alert'
+import { Tip } from '../../components/alert'
 
 # Search
 
 **Search extension** provides support for searching the entire database for a specified value.
 
-<Alert type="tip">
+<Tip>
 We are rewriting the calling syntax and this documentation may be out of date.
-</Alert>
+</Tip>
 
 In the sample database, the records in the **Suppliers** table are as follows:
 
