--- a/pages/cli/dotnet-orm.mdx
+++ b/pages/cli/dotnet-orm.mdx
@@ -1,7 +1,7 @@
-import Alert from '../../components/alert'
+import { Warning } from '../../components/alert'
 
 ### dotnet-orm
 
-<Alert type="warning">
+<Warning>
 Docs for this theme is under construction.
-</Alert>
+</Warning>
