--- a/pages/ef/format-annotation.mdx
+++ b/pages/ef/format-annotation.mdx
@@ -1,7 +1,7 @@
-import Alert from '../../components/alert'
+import { Warning } from '../../components/alert'
 
 # Format Annotation
 
-<Alert type="warning">
+<Warning>
 Docs for this theme is under construction.
-</Alert>
+</Warning>
