--- a/pages/guide/recently.mdx
+++ b/pages/guide/recently.mdx
@@ -1,9 +1,9 @@
-import Alert from '../../components/alert'
+import { Note } from '../../components/alert'
 
 # Plan: Search Updates
 
-<Alert type="note">
+<Note>
 Scheduled to be updated by December 31, 2023.
-</Alert>
+</Note>
 
 There is no English version, please go to [Chinese version](https://zh.linqsharp.net/guide/recently).
