--- a/pages/memory/tree-query.mdx
+++ b/pages/memory/tree-query.mdx
@@ -1,7 +1,7 @@
-import Alert from '../../components/alert'
+import { Warning } from '../../components/alert'
 
 # Tree Query
 
-<Alert type="warning">
+<Warning>
 Docs for this theme is under construction.
-</Alert>
+</Warning>
