--- a/pages/guide/started.mdx
+++ b/pages/guide/started.mdx
@@ -20,7 +20,7 @@ ExpTree --> |Provider for MySQL| MySQL[SQL of MySQL]
 ExpTree --> |Other Providers...| Other[Other SQLs...]
 ```
 
-Most languages does not provide compile-time conversion of Lambdas to Expression Trees, which is one of the reasons why the .NET ORM can be designed to be very easy to use.
+Most languages do not provide compile-time conversion of Lambdas to Expression Trees, which is one of the reasons why the .NET ORM can be designed to be very easy to use.
 
 It is worth pointing out that true generics support is also indispensable, which makes the expression tree more scalable.
 
