--- a/pages/updates/7.0.mdx
+++ b/pages/updates/7.0.mdx
@@ -1,5 +1,30 @@
 # 7.0
 
+### Version: 7.0.34
+
+- New Feature: Added **IExtraFieldFilter** interface for more flexible field filtering.
+
+### Version: 7.0.32
+
+- Compatibility updates: **NStandard - 0.48.0 - Update**, **Ref**.
+
+### Version: 7.0.30
+
+- Compatibility updates: **NStandard - 0.45.0 - Update**, **DateOnlyType** and **DateTimeType**.
+
+### Version: 7.0.27
+
+- **Breaking Change**: Adjusted some namespace names.
+- **Bug fixed**: Null support for **AllSame**.
+
+### Version: 7.0.24
+
+- **Breaking Change**: Adjusted some namespace names.
+
+### Version: 7.0.20
+
+- **Indexing** / **UniqueIndexing** modified to lazy query.
+
 ### Version: 7.0.18.1
 
 - Two field filters have been added: **DateOnlyRangeFilter**, **DateTimeRangeFilter**.
