--- a/pages/ef/auto-field.mdx
+++ b/pages/ef/auto-field.mdx
@@ -36,6 +36,6 @@ The **database value** is **not null**:
 |  | Add  | Modify | Delete |
 | ---- | ---- | ------ | ------ |
 | **Auto**      | ✔️    | ⚠️    | ⚠️    |
-| **Preserve**  | ✔️    | ⚠️    | ✔️    |
+| **Preserve**  | ✔️    | ❌    | ✔️    |
 | **Specified** | ✔️    | ✔️    | ✔️    |
 
