--- a/pages/ef/auto-field.mdx
+++ b/pages/ef/auto-field.mdx
@@ -40,6 +40,6 @@ The **database value** is **not null**:
 |              | Add  | Delete | Modify | Modify columns |
 | ------------ | :--: | :----: | :----: | :------------: |
 | **Auto**     |  ✔️   |   ⚠️    |   ⚠️    |       ⚠️        |
-| **Preserve** |  ✔️   |   ⚠️    |   ❌    |       ❌        |
+| **Preserve** |  ✔️   |   ⚠️    |   ❌    |       ✔️        |
 | **Free**     |  ✔️   |   ✔️    |   ✔️    |       ✔️        |
 
