--- a/pages/guide/recently.mdx
+++ b/pages/guide/recently.mdx
@@ -1,9 +1,9 @@
-import { Note } from '../../components/alert'
+import { Callout } from 'nextra/components'
 
 # Plan: Search Updates
 
-<Note>
+<Callout>
 Scheduled to be updated by December 31, 2023.
-</Note>
+</Callout>
 
 There is no English version, please go to [Chinese version](https://zh.linqsharp.net/guide/recently).
