--- a/pages/linq/search.mdx
+++ b/pages/linq/search.mdx
@@ -1,12 +1,12 @@
-import { Tip } from '../../components/alert'
+import { Callout } from 'nextra/components'
 
 # Search
 
 **Search extension** provides support for searching the entire database for a specified value.
 
-<Tip>
+<Callout type="warning">
 We are rewriting the calling syntax and this documentation may be out of date.
-</Tip>
+</Callout>
 
 In the sample database, the records in the **Suppliers** table are as follows:
 
