--- a/pages/cli/dotnet-orm.mdx
+++ b/pages/cli/dotnet-orm.mdx
@@ -1,7 +1,7 @@
-import { Warning } from '../../components/alert'
+import { Callout } from 'nextra/components'
 
 ### dotnet-orm
 
-<Warning>
+<Callout>
 Docs for this theme is under construction.
-</Warning>
+</Callout>
