--- a/pages/ef/direct-handing.mdx
+++ b/pages/ef/direct-handing.mdx
@@ -1,7 +1,7 @@
-import { Warning } from '../../components/alert'
+import { Callout } from 'nextra/components'
 
 # Direct Handing
 
-<Warning>
+<Callout>
 Docs for this theme is under construction.
-</Warning>
+</Callout>
