--- a/pages/ef/monitoring.mdx
+++ b/pages/ef/monitoring.mdx
@@ -1,7 +1,7 @@
-import { Warning } from '../../components/alert'
+import { Callout } from 'nextra/components'
 
 # Monitoring
 
-<Warning>
+<Callout>
 Docs for this theme is under construction.
-</Warning>
+</Callout>
