--- a/pages/ef/translator.mdx
+++ b/pages/ef/translator.mdx
@@ -1,7 +1,7 @@
-import { Warning } from '../../components/alert'
+import { Callout } from 'nextra/components'
 
 # Translator
 
-<Warning>
+<Callout>
 Docs for this theme is under construction.
-</Warning>
+</Callout>
