--- a/pages/linq/field-filter.mdx
+++ b/pages/linq/field-filter.mdx
@@ -1,7 +1,7 @@
-import { Warning } from '../../components/alert'
+import { Callout } from 'nextra/components'
 
 # Field Filter
 
-<Warning>
+<Callout>
 Docs for this theme is under construction.
-</Warning>
+</Callout>
